16 failing, but improved 3 tests; added extra case in ExpressionAnalyzer.replaceFieldType